--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-vue-next": "^0.363.0",
     "nuxt": "^3.11.0",
+    "radix-vue": "^1.5.3",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.4",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.36",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
-    "tailwindcss": "^3.4.1"
+    "shadcn-nuxt": "^0.10.2",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.3"
   }
 }
