feat: tweaked ts config and installed supabase

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,29 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+
+  "compilerOptions": {
+    // Base Options recommended for all projects
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
+
+    // Enable strict type checking so you can catch bugs early
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    // Transpile our TypeScript code to JavaScript
+    "module": "ES2022",
+    "outDir": "dist",
+    // Include the DOM types
+    "lib": ["es2022", "dom", "dom.iterable"]
+  },
+  // Include the necessary files for your project
+  "include": ["**/*.ts", "**/*.vue"],
+  "exclude": ["node_modules"]
 }
