--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.219",
+    "@iconify/tailwind": "^1.1.1",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt-icon": "^0.6.10",
