--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@nuxtjs/supabase": "^1.2.1",
     "@prisma/client": "5.13.0",
-    "@vueuse/core": "^10.9.0",
+    "@vueuse/core": "^10.11.0",
     "ajv": "^7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -21,6 +21,7 @@
     "radix-vue": "^1.7.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul-vue": "^0.1.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -29,10 +30,12 @@
     "@iconify/tailwind": "^1.1.1",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@vueuse/nuxt": "^10.11.0",
     "nuxt-icon": "^0.6.10",
     "prisma": "^5.13.0",
     "shadcn-nuxt": "^0.10.2",
     "typescript": "^5.4.5",
     "vue-tsc": "^1"
-  }
+  },
+  "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631"
 }
