--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "moduleDetection": "force",
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
+    "allowSyntheticDefaultImports": true,
 
     // Enable strict type checking so you can catch bugs early
     "strict": true,
