--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev -o",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@fontsource/alegreya-sans": "^5.0.13",
@@ -35,14 +37,23 @@
     "vue3-icon-picker": "^0.1.3"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.6.0",
     "@iconify/json": "^2.2.219",
     "@iconify/tailwind": "^1.1.1",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-interactions": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
+    "@storybook/blocks": "^8.1.11",
+    "@storybook/test": "^8.1.11",
+    "@storybook/vue3": "^8.1.11",
+    "@storybook/vue3-vite": "^8.1.11",
     "@vueuse/nuxt": "^10.11.0",
     "nuxt-icon": "^0.6.10",
     "prisma": "^5.15.1",
     "shadcn-nuxt": "^0.10.4",
+    "storybook": "^8.1.11",
     "typescript": "^5.4.5",
     "vue-tsc": "^1"
   },
