feat(ui): implement target per week field in create new habit form

--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.376.0",
     "nuxt": "^3.11.2",
-    "radix-vue": "^1.7.3",
+    "radix-vue": "^1.9.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "universal-icon-picker": "^1.1.7",
     "vanilla-icon-picker": "^1.3.0",
     "vaul-vue": "^0.1.2",
+    "vee-validate": "<3.0.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue3-icon-picker": "^0.1.3"
