feat: implemented line chart in dashboard

--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "@fontsource/geist-sans": "^5.0.3",
     "@fontsource/ibm-plex-sans": "^5.0.20",
     "@haxtheweb/simple-icon-picker": "9.0.0-alpha.0",
+    "@nuxt/typescript-build": "^3.0.2",
     "@nuxtjs/supabase": "^1.2.1",
     "@prisma/client": "^5.15.1",
-    "@unovis/ts": "^1.4.1",
-    "@unovis/vue": "^1.4.1",
-    "@vueuse/core": "^10.11.0",
+    "@unovis/ts": "^1.4.4",
+    "@unovis/vue": "^1.4.4",
+    "@vueuse/core": "^10.11.1",
     "ajv": "^7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.376.0",
-    "nuxt": "^3.11.2",
+    "nuxt": "^3.13.1",
     "radix-vue": "^1.9.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -49,6 +50,7 @@
     "@storybook/test": "^8.1.11",
     "@storybook/vue3": "^8.1.11",
     "@storybook/vue3-vite": "^8.1.11",
+    "@volar/typescript": "^2.4.2",
     "@vueuse/nuxt": "^10.11.0",
     "nuxt-icon": "^0.6.10",
     "prisma": "^5.15.1",
