feat: current streak and longest streak working

--- a/package.json
+++ b/package.json
@@ -12,52 +12,56 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@fontsource/alegreya-sans": "^5.0.13",
+    "@fontsource/alegreya-sans": "^5.0.15",
     "@fontsource/geist-sans": "^5.0.3",
-    "@fontsource/ibm-plex-sans": "^5.0.20",
+    "@fontsource/ibm-plex-sans": "^5.0.22",
     "@haxtheweb/simple-icon-picker": "9.0.0-alpha.0",
     "@nuxt/typescript-build": "^3.0.2",
-    "@nuxtjs/supabase": "^1.2.1",
-    "@prisma/client": "^5.15.1",
+    "@nuxtjs/supabase": "^1.4.0",
+    "@prisma/client": "^5.19.1",
     "@unovis/ts": "^1.4.4",
     "@unovis/vue": "^1.4.4",
     "@vueuse/core": "^10.11.1",
-    "ajv": "^7",
+    "ajv": "^7.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "lucide-vue-next": "^0.376.0",
     "nuxt": "^3.13.1",
     "radix-vue": "^1.9.5",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "universal-icon-picker": "^1.1.7",
-    "vanilla-icon-picker": "^1.3.0",
-    "vaul-vue": "^0.1.2",
-    "vee-validate": "<3.0.0",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
+    "vanilla-icon-picker": "^1.3.1",
+    "vaul-vue": "^0.1.3",
+    "vee-validate": "^2.2.15",
+    "vue": "^3.5.4",
+    "vue-router": "^4.4.4",
     "vue3-icon-picker": "^0.1.3"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.219",
-    "@iconify/tailwind": "^1.1.1",
+    "@iconify/json": "^2.2.246",
+    "@iconify/tailwind": "^1.1.3",
     "@nuxtjs/eslint-module": "^4.1.0",
-    "@nuxtjs/tailwindcss": "^6.12.0",
-    "@storybook/addon-essentials": "^8.1.11",
-    "@storybook/addon-interactions": "^8.1.11",
-    "@storybook/addon-links": "^8.1.11",
-    "@storybook/blocks": "^8.1.11",
-    "@storybook/test": "^8.1.11",
-    "@storybook/vue3": "^8.1.11",
-    "@storybook/vue3-vite": "^8.1.11",
-    "@volar/typescript": "^2.4.2",
-    "@vueuse/nuxt": "^10.11.0",
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/test": "^8.2.9",
+    "@storybook/vue3": "^8.2.9",
+    "@storybook/vue3-vite": "^8.2.9",
+    "@volar/typescript": "^2.4.4",
+    "@vueuse/nuxt": "^10.11.1",
     "nuxt-icon": "^0.6.10",
-    "prisma": "^5.15.1",
+    "prisma": "^5.19.1",
     "shadcn-nuxt": "^0.10.4",
-    "storybook": "^8.1.11",
-    "typescript": "^5.5.4",
+    "storybook": "^8.2.9",
+    "typescript": "^5.6.2",
     "vue-tsc": "^2.1.6"
+  },
+  "resolutions": {
+    "vite-plugin-checker": "^0.8.0"
   },
   "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631"
 }
