--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "prisma generate && nuxt build",
     "dev": "nuxt dev -o",
+    "test": "jest",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -51,12 +52,15 @@
     "@storybook/test": "^8.2.9",
     "@storybook/vue3": "^8.2.9",
     "@storybook/vue3-vite": "^8.2.9",
+    "@types/jest": "^29.5.13",
     "@volar/typescript": "^2.4.4",
     "@vueuse/nuxt": "^10.11.1",
+    "jest": "^29.7.0",
     "nuxt-icon": "^0.6.10",
     "prisma": "^5.19.1",
     "shadcn-nuxt": "^0.10.4",
     "storybook": "^8.2.9",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.2",
     "vue-tsc": "^2.1.6"
   },
