--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
     "verbatimModuleSyntax": false,
-    "types": ["jest", "node"]
-  }
+    "types": ["jest", "node"],
+    "skipLibCheck": true
+  },
+  "exclude": ["node_modules"]
 }
