--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
     "prisma": "^5.19.1",
     "shadcn-nuxt": "^0.10.4",
     "storybook": "^8.2.9",
+    "tippy.js": "^6.3.7",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.2",
-    "vue-tsc": "^2.1.6"
+    "vue-tsc": "^2.1.6",
+    "vue3-calendar-heatmap": "^2.0.5"
   },
   "resolutions": {
     "vite-plugin-checker": "^0.8.0"
